Java Programming  Fundamentals/FindingAllGenesDNA/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA
-d
C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\AllCodons.java
<---- end of javadoc command ---->
Loading source file C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\AllCodons.java...
Constructing Javadoc information...
C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\AllCodons.java:47: error: cannot find symbol
    public StorageResource getAll(String dna){
           ^
  symbol:   class StorageResource
  location: class AllCodons
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\AllCodons.html...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\package-frame.html...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\package-summary.html...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\allclasses-frame.html...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\allclasses-noframe.html...
Generating C:\Users\diana\Documents\Coursera-Exercises\Java Programming  Fundamentals\FindingAllGenesDNA\doc\index.html...
1 warning
